                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-03-2006 changed: disabled sort order button for bookmarks in music nav
 - 07-03-2006 fixed: if the last focused control of a control group is disabled, no other control will get the focus
 - 07-03-2006 fixed: party mode table is missing when a new musicdatabase is created
 - 07-03-2006 fixed: some dvd menu's with still frames would have double overlays, one stuck one movable
 - 07-03-2006 fixed: ListItem.Directory etc. weren't working correctly.
 - 07-03-2006 changed: avoid closing audiocodec/renderer if stream's codec info didn't change over vts borders
 - 07-03-2006 changed: general stream discontinuity detection in dvdplayer (support for non dvd streams).
 - 07-03-2006 changed: Music Party Mode now uses a database table for its history, means another upgrade to version 1.6
 - 07-03-2006 changed: when Music Party Mode is enabled, all the extraneous playlist buttons in the Now Playing window are disabled
 - 07-03-2006 changed: "Delete" option in the root share context menu to "Remove Source" for consistency
 - 07-03-2006 fixed: playlist caching
 - 07-03-2006 changed: files added to the musicdatabase with no artist or album set will be added to an artist/album "Unknown"
                       musicdatabase will be updated to version 1.5
                       This also fixes: some artists in music nav are not selectable
 - 07-03-2006 fixed: Multiple paths in XBoxMediaCenter.xml would mean games wouldn't be found from Kai.
 - 06-03-2006 added: <number> tag to label control (for display of numbers)
 - 06-03-2006 added: Skin.SetBool and Skin.Reset <onclick> functions.